force-app/main/default/objects/Contact/fields/Guest_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Guest_Preferences__c</fullName><label>Guest Preferences</label>
    <type>LongTextArea</type><length>32768</length><visibleLines>4</visibleLines>
</CustomField>