force-app/main/default/objects/Contact/fields/Guest_Tier__c.field-meta.xml
<CustomField>
    <fullName>Guest_Tier__c</fullName><label>Guest Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Bronze</fullName><default>true</default><label>Bronze</label></value>
            <value><fullName>Silver</fullName><default>false</default><label>Silver</label></value>
            <value><fullName>Gold</fullName><default>false</default><label>Gold</label></value>
            <value><fullName>Platinum</fullName><default>false</default><label>Platinum</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>