force-app/main/default/objects/Contact/fields/Total_Nights__c.field-meta.xml
<CustomField>
    <fullName>Total_Nights__c</fullName><label>Total Nights</label>
    <type>Number</type><precision>6</precision><scale>0</scale>
<unique>false</unique><externalId>false</externalId>
</CustomField>